Project Workspace added third times

--- a/src/main/resources/static/partials/_sidebar.html
+++ b/src/main/resources/static/partials/_sidebar.html
@@ -7,7 +7,7 @@
           <div class="dot-indicator bg-success"></div>
         </div>
         <div class="text-wrapper">
-          <p class="profile-name">Allen Moreno</p>
+          <p class="profile-name">#{username}</p>
           <p class="designation">Administrator</p>
         </div>
         <div class="icon-container">
